# serializer version: 1
# name: test_build_example
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-89cac9f1/example-89cac9f1-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_89cac9f1"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_89cac9f1"]
        
        [project]
        name = "example-89cac9f1"
        version = "0.0.0"
        dependencies = ["example-89cac9f1-a"]
        requires-python = ">=3.7"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`"
  
      ''',
      'build/example-89cac9f1/example-89cac9f1-0.0.0/src/example_89cac9f1/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-89cac9f1/example-89cac9f1-a-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_89cac9f1_a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_89cac9f1_a"]
        
        [project]
        name = "example-89cac9f1-a"
        version = "1.0.0"
        dependencies = ["example-89cac9f1-b>1.0.0"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-89cac9f1/example-89cac9f1-a-1.0.0/src/example_89cac9f1_a/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-89cac9f1/example-89cac9f1-b-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_89cac9f1_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_89cac9f1_b"]
        
        [project]
        name = "example-89cac9f1-b"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-89cac9f1/example-89cac9f1-b-1.0.0/src/example_89cac9f1_b/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-89cac9f1/example-89cac9f1-b-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_89cac9f1_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_89cac9f1_b"]
        
        [project]
        name = "example-89cac9f1-b"
        version = "2.0.0"
        dependencies = ["example-89cac9f1-c"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-89cac9f1/example-89cac9f1-b-2.0.0/src/example_89cac9f1_b/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-89cac9f1/example-89cac9f1-b-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_89cac9f1_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_89cac9f1_b"]
        
        [project]
        name = "example-89cac9f1-b"
        version = "3.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-89cac9f1/example-89cac9f1-b-3.0.0/src/example_89cac9f1_b/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-89cac9f1/example_89cac9f1-0.0.0.tar.gz': 'md5:41c674979948f86298b12bfb266c2e2b',
      'dist/example-89cac9f1/example_89cac9f1_a-1.0.0-py3-none-any.whl': 'md5:5a8c2771ea48952748212952a5496a76',
      'dist/example-89cac9f1/example_89cac9f1_a-1.0.0.tar.gz': 'md5:3dd33497f3aef7b769310301df7ee9b9',
      'dist/example-89cac9f1/example_89cac9f1_b-1.0.0-py3-none-any.whl': 'md5:dad4a0d08a169363900490b1a1cd2402',
      'dist/example-89cac9f1/example_89cac9f1_b-1.0.0.tar.gz': 'md5:a79c62317cada753a0c7ce33eec6ce0e',
      'dist/example-89cac9f1/example_89cac9f1_b-2.0.0-py3-none-any.whl': 'md5:b18e20171f69148d6f25bc784f81dcc9',
      'dist/example-89cac9f1/example_89cac9f1_b-2.0.0.tar.gz': 'md5:06285d6a2a03f853350150d586ad6168',
      'dist/example-89cac9f1/example_89cac9f1_b-3.0.0-py3-none-any.whl': 'md5:723a3b752e9d310ca93fc0d7c010010e',
      'dist/example-89cac9f1/example_89cac9f1_b-3.0.0.tar.gz': 'md5:5c22d765823c9a50013a6264a40db7f0',
      'tree': '''
        test_build_example0
        ├── build
        │   └── example-89cac9f1
        │       ├── example-89cac9f1-0.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_89cac9f1
        │       │           └── __init__.py
        │       ├── example-89cac9f1-a-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_89cac9f1_a
        │       │           └── __init__.py
        │       ├── example-89cac9f1-b-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_89cac9f1_b
        │       │           └── __init__.py
        │       ├── example-89cac9f1-b-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_89cac9f1_b
        │       │           └── __init__.py
        │       └── example-89cac9f1-b-3.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_89cac9f1_b
        │                   └── __init__.py
        └── dist
            └── example-89cac9f1
                ├── example_89cac9f1-0.0.0.tar.gz
                ├── example_89cac9f1_a-1.0.0-py3-none-any.whl
                ├── example_89cac9f1_a-1.0.0.tar.gz
                ├── example_89cac9f1_b-1.0.0-py3-none-any.whl
                ├── example_89cac9f1_b-1.0.0.tar.gz
                ├── example_89cac9f1_b-2.0.0-py3-none-any.whl
                ├── example_89cac9f1_b-2.0.0.tar.gz
                ├── example_89cac9f1_b-3.0.0-py3-none-any.whl
                └── example_89cac9f1_b-3.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-89cac9f1
  
    ''',
  })
# ---
# name: test_build_example_already_exists
  dict({
    'exit_code': 1,
    'filesystem': dict({
      'tree': '''
        test_build_example_already_exi0
        └── build
            └── example-89cac9f1
        
        2 directories
  
      ''',
    }),
    'stderr': '''
      Building 'example-89cac9f1' in directory 'build/example-89cac9f1'
      Destination directory '[PWD]/build/example-89cac9f1' already exists. Pass `--rm` to allow removal.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_example_already_exists_with_rm_flag
  dict({
    'exit_code': 0,
    'stderr': '<not included>',
    'stdout': '''
      example-89cac9f1
  
    ''',
  })
# ---
# name: test_build_example_with_seed
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-c677721a/example-c677721a-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_c677721a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_c677721a"]
        
        [project]
        name = "example-c677721a"
        version = "0.0.0"
        dependencies = ["example-c677721a-a"]
        requires-python = ">=3.7"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`"
  
      ''',
      'build/example-c677721a/example-c677721a-0.0.0/src/example_c677721a/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-c677721a/example-c677721a-a-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_c677721a_a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_c677721a_a"]
        
        [project]
        name = "example-c677721a-a"
        version = "1.0.0"
        dependencies = ["example-c677721a-b>1.0.0"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-c677721a/example-c677721a-a-1.0.0/src/example_c677721a_a/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-c677721a/example-c677721a-b-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_c677721a_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_c677721a_b"]
        
        [project]
        name = "example-c677721a-b"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-c677721a/example-c677721a-b-1.0.0/src/example_c677721a_b/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-c677721a/example-c677721a-b-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_c677721a_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_c677721a_b"]
        
        [project]
        name = "example-c677721a-b"
        version = "2.0.0"
        dependencies = ["example-c677721a-c"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-c677721a/example-c677721a-b-2.0.0/src/example_c677721a_b/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-c677721a/example-c677721a-b-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_c677721a_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_c677721a_b"]
        
        [project]
        name = "example-c677721a-b"
        version = "3.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-c677721a/example-c677721a-b-3.0.0/src/example_c677721a_b/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-c677721a/example_c677721a-0.0.0.tar.gz': 'md5:5ad3fd239ea76137c3a5d5bfa78dc499',
      'dist/example-c677721a/example_c677721a_a-1.0.0-py3-none-any.whl': 'md5:182861ad50365878beb67aa457cbcd7e',
      'dist/example-c677721a/example_c677721a_a-1.0.0.tar.gz': 'md5:f316d2362971a62c5196d80b52819457',
      'dist/example-c677721a/example_c677721a_b-1.0.0-py3-none-any.whl': 'md5:d2dd6be22d46b19ea9f6be6fdb078365',
      'dist/example-c677721a/example_c677721a_b-1.0.0.tar.gz': 'md5:d30dc72bffc69996628b24f6442d766e',
      'dist/example-c677721a/example_c677721a_b-2.0.0-py3-none-any.whl': 'md5:f644b3bb4836968efb40bd2e8bc73a65',
      'dist/example-c677721a/example_c677721a_b-2.0.0.tar.gz': 'md5:1f378d4351019a0546d62d28eb72e15e',
      'dist/example-c677721a/example_c677721a_b-3.0.0-py3-none-any.whl': 'md5:6b85c79980f438e57ce9253dbb2f7a72',
      'dist/example-c677721a/example_c677721a_b-3.0.0.tar.gz': 'md5:c3af005c45b23b6519e483d6e774958f',
      'tree': '''
        test_build_example_with_seed0
        ├── build
        │   └── example-c677721a
        │       ├── example-c677721a-0.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_c677721a
        │       │           └── __init__.py
        │       ├── example-c677721a-a-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_c677721a_a
        │       │           └── __init__.py
        │       ├── example-c677721a-b-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_c677721a_b
        │       │           └── __init__.py
        │       ├── example-c677721a-b-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_c677721a_b
        │       │           └── __init__.py
        │       └── example-c677721a-b-3.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_c677721a_b
        │                   └── __init__.py
        └── dist
            └── example-c677721a
                ├── example_c677721a-0.0.0.tar.gz
                ├── example_c677721a_a-1.0.0-py3-none-any.whl
                ├── example_c677721a_a-1.0.0.tar.gz
                ├── example_c677721a_b-1.0.0-py3-none-any.whl
                ├── example_c677721a_b-1.0.0.tar.gz
                ├── example_c677721a_b-2.0.0-py3-none-any.whl
                ├── example_c677721a_b-2.0.0.tar.gz
                ├── example_c677721a_b-3.0.0-py3-none-any.whl
                └── example_c677721a_b-3.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-c677721a
  
    ''',
  })
# ---
# name: test_build_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_no_target
  dict({
    'exit_code': 2,
    'stderr': '''
      usage: packse build [-h] [--rm] [-v] [-q] targets [targets ...]
      packse build: error: the following arguments are required: targets
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
